--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,8 @@ nav {
 }
 
 .nav-bar .link {
+  position: relative;
+
   color: var(--secondary-page-text);
 
   font-weight: 500;
@@ -113,6 +115,32 @@ nav {
 
 .nav-bar > li:last-child {
   margin-right: 0px;
+}
+
+.link::after {
+  content: '';
+
+  position: absolute;
+  left: 0;
+  top: 45px;
+
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+
+  background-color: var(--main-accent);
+
+  opacity: 0;
+  transform: scaleX(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.link:hover::after,
+.link:focus::after {
+  opacity: 1;
+  transform: scaleX(1);
 }
 
 .link:hover,
@@ -360,9 +388,7 @@ nav {
   padding-bottom: 27px;
 
   min-width: 370px;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
-
+  
   color: var(--page-hero-text);
   background-color: var(--fig-caption-bg);
 
@@ -761,8 +787,6 @@ nav {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: transparent;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
 
   background: var(--primary-bg);
 }
