--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@
     --team-section-bg: #f5f4fa;
     --footer-bg: #2f303a;
     --footer-links-bg: rgba(255, 255, 255, 0.1);
+    --portfolio-overlay: rgba(33, 150, 243, 0.9);
 }
 
 /* Шрифты  и главный фон страницы*/
@@ -53,6 +54,7 @@ img {
 
 /* Шапка сайта */
 .page-header {
+  
   padding-top: 24px;
   padding-bottom: 25px;
 
@@ -122,7 +124,7 @@ nav {
 
   position: absolute;
   left: 0;
-  top: 45px;
+  top: 45.5px;
 
   display: block;
   width: 100%;
@@ -133,8 +135,7 @@ nav {
 
   opacity: 0;
   transform: scaleX(0);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link:hover::after,
@@ -177,11 +178,14 @@ nav {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
+
 }
 
 .studio-contacts:hover,
 .studio-contacts:focus {
   color: var(--main-accent);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-envelope {
@@ -371,16 +375,17 @@ nav {
   margin-right: 0px;
 }
 
-.target {
-  position: static;
+.target-img {
+  position: relative;
 }
 
 /* Подписи к проектам */
 .project {
-  display: inline-block;
-
   position: absolute;
-  top: 1533px;
+
+  display: block;
+  left: 0px;
+  bottom: 0px;
 
   margin-top: 0px;
   margin-bottom: 0px;
@@ -513,6 +518,8 @@ nav {
 .icon a:focus {
   background-color: var(--main-accent);
   fill: var(--page-hero-text);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Секция клиентов */
@@ -566,6 +573,8 @@ nav {
 .client-icon:focus {
   fill: var(--main-accent);
   border: 1px solid var(--main-accent);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Подвал сайта */
@@ -725,8 +734,8 @@ nav {
 .nav-portfolio:focus {
   color: var(--page-hero-text);
   background-color: var(--main-accent);
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 3px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .work-list {
@@ -737,18 +746,13 @@ nav {
   list-style-type: none;
 }
 
-.work-item > a {
-  text-decoration: none;
-}
-
-.work-item:hover,
-.work-item:focus {
-  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
-}
-
 .work-item {
   margin-right: 30px;
   margin-bottom: 30px;
+}
+
+.work-item > a {
+  text-decoration: none;
 }
 
 .work-item:nth-child(3n) {
@@ -757,6 +761,46 @@ nav {
 
 .work-item:nth-last-child(-n + 3) {
   margin-bottom: 0px;
+}
+
+.project-img {
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  width: 100%;
+  height: 100%;
+  background-color: var(--portfolio-overlay);
+
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+
+  margin: 0px;
+  padding: 63px 24px;
+
+  color: var(--page-hero-text);
+
+  transform: translateY(100%);
+  opacity: 0;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.work-item:hover,
+.work-item:focus {
+  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.work-item:hover .overlay,
+.work-item:focus .overlay {
+  transform: translateY(0);
+  opacity: 1;
 }
 
 .list-title {
