--- a/css/styles.css
+++ b/css/styles.css
@@ -747,20 +747,22 @@ nav {
   list-style-type: none;
 }
 
-.work-item {
+.work-list li {
   margin-right: 30px;
   margin-bottom: 30px;
 }
 
-.work-item > a {
+.work-item {
+  display: block;
+
   text-decoration: none;
 }
 
-.work-item:nth-child(3n) {
+.work-list li:nth-child(3n) {
   margin-right: 0px;
 }
 
-.work-item:nth-last-child(-n + 3) {
+.work-list li:nth-last-child(-n + 3) {
   margin-bottom: 0px;
 }
 
