--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,8 @@
     --footer-bg: #2f303a;
     --footer-links-bg: rgba(255, 255, 255, 0.1);
     --portfolio-overlay: rgba(33, 150, 243, 0.9);
+    --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    --animation-period: 250ms;
 }
 
 /* Шрифты  и главный фон страницы*/
@@ -67,7 +69,7 @@ img {
 
   background-color: var(--primary-bg);
   border: 1px solid #ececec;
-  z-index: 999;
+  z-index: 1;
 }
 
 .header-menu {
@@ -117,7 +119,7 @@ nav {
   letter-spacing: 0.02em;
   text-decoration: none;
 
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: var(--animation-period) var(--timing-function);
 }
 
 .nav-bar > li {
@@ -178,7 +180,7 @@ nav {
   letter-spacing: 0.02em;
   text-decoration: none;
 
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: var(--animation-period) var(--timing-function);
 }
 
 .studio-contacts:hover,
@@ -506,14 +508,14 @@ nav {
 
   fill: var(--link-icons);
 
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: var(--animation-period) var(--timing-function);
 }
 
 .icon-footer > a {
   background-color: var(--footer-links-bg);
   fill: var(--page-hero-text);
 
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: var(--animation-period) var(--timing-function);
 }
 
 .icon a:hover,
@@ -568,7 +570,7 @@ nav {
   border: 1px solid var(--link-icons);
   border-radius: 4px;
 
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: var(--animation-period) var(--timing-function);
 }
 
 .client-icon:hover,
@@ -721,7 +723,7 @@ nav {
   text-align: center;
   letter-spacing: 0.03em;
 
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: var(--animation-period) var(--timing-function);
 }
 
 .filter-btn {
@@ -791,7 +793,7 @@ nav {
 
   transform: translateY(100%);
   opacity: 0;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: var(--animation-period) var(--timing-function);
 }
 
 .work-item:hover,
@@ -835,4 +837,58 @@ nav {
   border-top: transparent;
 
   background: var(--primary-bg);
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  
+  width: 100%;
+  height: 100%;
+  
+  background-color: rgba(0, 0, 0, 0.2);
+
+  z-index: 2;
+
+  opacity: 1;
+
+  transition: opacity var(--animation-period) var(--timing-function);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.9);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  
+  width: 528px;
+  height: 581px;
+  
+  padding: 40px;
+
+  background-color: #fff;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+
+  transition: transform var(--animation-period) var(--timing-function);
+}
+
+.modal-header {
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--secondary-page-text);
 }
